// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

package evtsmgrproto;

// Mandatory imports
import "google/api/annotations.proto";
import "github.com/pensando/sw/api/common.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/protos/events.proto";

// events manager gRPC API
service EvtsMgrAPI {
    // any component can use this method to generate an event
    rpc SendEvents (events.EventList) returns (api.Empty) {};
}
